force-app/main/default/objects/Org_Exception__c/Org_Exception__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to Bypass Workflows, Processes, Flows, Triggers and Validation Rules</description>
    <label>Org Exception</label>
</CustomObject>