force-app/main/default/objects/Org_Exception__c/fields/Bypass_Apex_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Apex_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to bypass triggers for the user or profile</description>
    <label>Bypass Apex Triggers</label>
    <type>Checkbox</type>
</CustomField>