force-app/main/default/objects/Org_Exception__c/fields/Bypass_Process_Builders__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Process_Builders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to bypass process builders for the user or profile</description>
    <label>Bypass Process Builders</label>
    <type>Checkbox</type>
</CustomField>