force-app/main/default/objects/Org_Exception__c/fields/Bypass_Record_Triggered_Flows__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Record_Triggered_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to bypass record-triggered flows for the user or profile</description>
    <label>Bypass Record-Triggered Flows</label>
    <type>Checkbox</type>
</CustomField>