force-app/main/default/objects/Org_Exception__c/fields/Bypass_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to bypass the validation rules for the user or profile</description>
    <label>Bypass Validation Rules</label>
    <type>Checkbox</type>
</CustomField>