force-app/main/default/objects/Org_Exception__c/fields/Bypass_Workflow_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Workflow_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to bypass workflow rules for the user or profile</description>
    <label>Bypass Workflow Rules</label>
    <type>Checkbox</type>
</CustomField>